8215555: TieredCompilation C2 threads can excessively block handshakes

Reviewed-by: kvn, neliasso, rehn